--- a/.github/workflows/build_wheel.yml
+++ b/.github/workflows/build_wheel.yml
@@ -26,8 +26,8 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Setup dependencies
-        run: sudo apt update && sudo apt install -y wget cmake ninja-build g++ libx11-dev
-
+        run: sudo apt update && sudo apt install -y build-essential cmake cmake-curses-gui libgl1 xvfb x11-xserver-utils libglx-mesa0 libosmesa6-dev mesa-common-dev mesa-utils freeglut3-dev ninja-build 
+      
       - uses: actions/setup-python@v5
         with:
           python-version: ${{ github.event.inputs.python_version }}
@@ -41,8 +41,8 @@ jobs:
       - name: Build vtk
         run: |
             cd VTK-${{ github.event.inputs.vtk_full_version }}
-            cmake -GNinja -DVTK_WHEEL_BUILD=ON -DVTK_WRAP_PYTHON=ON -DCMAKE_BUILD_TYPE=Release -DVTK_GROUP_ENABLE_Web=WANT -S . -B build
-            cmake --build build
+            ccmake -GNinja -DVTK_WHEEL_BUILD=ON -DVTK_WRAP_PYTHON=ON -DCMAKE_BUILD_TYPE=Release -DVTK_GROUP_ENABLE_Web=YES -S . -B build
+            ccmake --build build
 
       - name: Build wheel
         run: |
